--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
-    tools:context="schools.b1gdigital.com.schools.MainActivity"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="schools.b1gdigital.com.schools.MainActivity">
 
     <data>
 
         <variable name="handlers" type="com.b1gdigital.schools.MainActivity"/>
         <variable
             name="school"
-            type="com.b1gdigital.schools.models.School" />
+            type="com.b1gdigital.schools.model.School" />
     </data>
 
     <RelativeLayout
@@ -24,28 +24,45 @@
 
         <TextView
             android:id="@+id/name"
-            android:textColor="@android:color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="@{handlers.onClickButton}"
             android:text="@{school.name}"
-            android:onClick="@{handlers.onClickButton}" />
+            android:textColor="@android:color/black" />
 
-        <fragment android:name="com.b1gdigital.schools.fragments.FragmentTest"
-            android:id="@+id/article_fragment"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/button"
-            android:layout_below="@+id/name" />
+            android:layout_below="@+id/name"
+            android:orientation="vertical">
+
+            <fragment
+                android:id="@+id/show_students_fragment"
+                android:name="com.b1gdigital.schools.fragments.ShowStudents"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+            <fragment
+                android:id="@+id/add_student_fragment"
+                android:name="com.b1gdigital.schools.fragments.AddStudent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+        </LinearLayout>
 
         <Button
             android:id="@+id/button"
-            android:text="@{school.name}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:onClick="@{handlers.onClickButton}" />
+            android:onClick="@{handlers.onClickButton}"
+            android:text="@{school.name}" />
 
     </RelativeLayout>
+
 </layout>
