--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,14 @@
 
     <data>
 
-        <variable name="handlers" type="com.b1gdigital.schools.MainActivity"/>
+        <variable
+            name="handlers"
+            type="com.b1gdigital.schools.MainActivity" />
+
         <variable
             name="school"
             type="com.b1gdigital.schools.model.School" />
+
     </data>
 
     <RelativeLayout
