--- a/app/src/main/res/layout/add_student_fragment.xml
+++ b/app/src/main/res/layout/add_student_fragment.xml
@@ -8,6 +8,7 @@
         <variable
             name="handlers"
             type="com.b1gdigital.schools.fragments.AddStudent" />
+
         <variable
             name="student"
             type="com.b1gdigital.schools.model.Student" />
@@ -35,6 +36,14 @@
             android:hint="grade"
             android:singleLine="true" />
 
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="end"
+            android:layout_weight="1"
+            android:onClick="@{handlers.onClickButton}"
+            android:text="Create" />
 
     </LinearLayout>
 
