--- a/app/src/main/res/layout/show_student_row_loader.xml
+++ b/app/src/main/res/layout/show_student_row_loader.xml
@@ -38,7 +38,7 @@
             <com.b1gdigital.schools.view.SquaredFrameLayout
                 android:id="@+id/vImageRoot"
                 android:layout_width="match_parent"
-                android:layout_height="250dp">
+                android:layout_height="wrap_content">
 
                 <ImageView
                     android:id="@+id/ivFeedCenter"
