--- a/app/src/main/res/layout/view_context_menu.xml
+++ b/app/src/main/res/layout/view_context_menu.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <Button
+    <TextView
         android:id="@+id/btnReport"
-        style="@style/ContextMenuButton"
-        android:text="REPORT"
-        android:textColor="@color/btn_context_menu_text_red" />
+        style="@style/ContextMenuButtonTop"
+        android:text="REPORT" />
 
-    <Button
+    <TextView
         android:id="@+id/btnSharePhoto"
         style="@style/ContextMenuButton"
-        android:text="SHARE PHOTO" />
+        android:text="SHARE PHOTO TEst" />
 
-    <Button
+    <TextView
         android:id="@+id/btnCopyShareUrl"
         style="@style/ContextMenuButton"
         android:text="COPY SHARE URL" />
@@ -22,9 +24,9 @@
         android:layout_height="1dp"
         android:background="#eeeeee" />
 
-    <Button
+    <TextView
         android:id="@+id/btnCancel"
-        style="@style/ContextMenuButton"
+        style="@style/ContextMenuButtonBottom"
         android:text="CANCEL" />
 
-</merge>
+</LinearLayout>
