--- a/app/src/main/res/drawable/bg_like_circle_background.xml
+++ b/app/src/main/res/drawable/bg_like_circle_background.xml
@@ -5,5 +5,13 @@
     android:right="2dp"
     android:shape="oval"
     android:top="2dp">
-    <solid android:color="#66ffffff" />
+    <solid
+        android:width="50dp"
+        android:height="50dp"
+        android:color="#66ffffff" />
+    <corners
+        android:bottomLeftRadius="2dp"
+        android:bottomRightRadius="2dp"
+        android:topLeftRadius="2dp"
+        android:topRightRadius="2dp" />
 </shape>
