Almost working coordinator

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,20 +28,13 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="@{handlers.onClickButton}"
-                android:text="@{school.name}"
-                android:textColor="@android:color/black" />
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_above="@+id/button"
                 android:layout_below="@+id/name"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
                 <fragment
                     android:id="@+id/show_students_fragment"
@@ -58,16 +51,6 @@
                     android:layout_weight="2" />
 
             </LinearLayout>
-
-            <Button
-                android:id="@+id/button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:onClick="@{handlers.onClickButton}"
-                android:text="@{school.name}" />
 
             <android.support.design.widget.AppBarLayout
                 android:id="@+id/appBarLayout"
