--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,6 @@
     </data>
 
     <RelativeLayout
-
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false">
@@ -28,22 +27,13 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <LinearLayout
+            <fragment
+                android:id="@+id/show_students_fragment"
+                android:name="com.b1gdigital.schools.fragments.ShowStudents"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_above="@+id/button"
-                android:layout_below="@+id/name"
-                android:orientation="vertical"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-                <fragment
-                    android:id="@+id/show_students_fragment"
-                    android:name="com.b1gdigital.schools.fragments.ShowStudents"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
-
-            </LinearLayout>
+                android:layout_weight="1"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
             <android.support.design.widget.AppBarLayout
                 android:id="@+id/appBarLayout"
@@ -59,9 +49,9 @@
                 android:id="@+id/btnCreate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom|right"
+                android:layout_gravity="bottom|end"
                 android:layout_marginBottom="@dimen/btn_fab_margins"
-                android:layout_marginRight="@dimen/btn_fab_margins"
+                android:layout_marginEnd="@dimen/btn_fab_margins"
                 android:src="@drawable/ic_instagram_white"
                 app:borderWidth="0dp"
                 app:elevation="6dp"
