--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,6 +53,7 @@
                 android:layout_marginBottom="@dimen/btn_fab_margins"
                 android:layout_marginEnd="@dimen/btn_fab_margins"
                 android:src="@drawable/ic_instagram_white"
+                android:visibility="invisible"
                 app:borderWidth="0dp"
                 app:elevation="6dp"
                 app:pressedTranslationZ="12dp" />
