--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
 
         <variable
             name="school"
-            type="com.b1gdigital.schools.model.School" />
+            type="School" />
 
     </data>
 
